[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "host-onboarding"
version = "1.0.0"
description = "Professional onboarding flow for Airbnb hosts - 100% Legal"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Rbie", email = "contact@azuz.io" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["airbnb", "host", "onboarding", "verification", "saas"]
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/rabi3laser/host-onboarding"
Repository = "https://github.com/rabi3laser/host-onboarding"

[tool.hatch.build.targets.wheel]
packages = ["src/host_onboarding"]
